--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -6,3 +6,6 @@ spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 spark.tachyonStore.url tachyon://{{active_master}}:19998
 # for spark version >= 1.4.0
 spark.externalBlockStore.url tachyon://{{active_master}}:19998
+
+# Suggested by XXX
+# spark.files file:///root/persistent-hdfs/conf/hdfs-site.xml,file:///root/spark/conf/core-site.xml
